force-app/main/default/objects/Formulario_de_caso__c/Formulario_de_caso__c.object-meta.xml
<CustomObject>
    <label>Formulario de Caso</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Nombre de Formulario de caso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formulario de casos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>