force-app/main/default/objects/Formulario_de_caso__c/fields/Ademas_de_la_formula_Toma_agua__c.field-meta.xml
<CustomField>
    <fullName>Ademas_de_la_formula_Toma_agua__c</fullName>
    <label>Ademas de la formula, ¿Toma agua?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>OTRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>