force-app/main/default/objects/Formulario_de_caso__c/fields/Consum_a_otra_marca_etapa_anteriormente__c.field-meta.xml
<CustomField>
    <fullName>Consum_a_otra_marca_etapa_anteriormente__c</fullName>
    <label>Consumía otra marca/etapa anteriormente?</label>
    <type>TextArea</type>
</CustomField>