force-app/main/default/objects/Formulario_de_caso__c/fields/Cual_es__c.field-meta.xml
<CustomField>
    <fullName>Cual_es__c</fullName>
    <label>¿Cual es?</label>
    <type>TextArea</type>
</CustomField>