force-app/main/default/objects/Formulario_de_caso__c/fields/Cuales2__c.field-meta.xml
<CustomField>
    <fullName>Cuales2__c</fullName>
    <label>¿Cuales?</label>
    <type>TextArea</type>
</CustomField>