force-app/main/default/objects/Formulario_de_caso__c/fields/Cuando_noto_el_defecto__c.field-meta.xml
<CustomField>
    <fullName>Cuando_noto_el_defecto__c</fullName>
    <inlineHelpText>Apenas abrió /en la preparación / pasado X tiempo</inlineHelpText>
    <label>¿Cuando noto el defecto?</label>
    <type>TextArea</type>
</CustomField>