force-app/main/default/objects/Formulario_de_caso__c/fields/Cuando_noto_los_sintomas__c.field-meta.xml
<CustomField>
    <fullName>Cuando_noto_los_sintomas__c</fullName>
    <inlineHelpText>Despues de cuantas tomas ocurrieron los sitomas?</inlineHelpText>
    <label>¿Cuando se presetaron los sintomas?</label>
    <type>TextArea</type>
</CustomField>