force-app/main/default/objects/Formulario_de_caso__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Nombre y apellido del paciente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Paciente__pr.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Best Care, Paciente Regular, Consumidor Baby</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Formulario_de_casos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>