force-app/main/default/objects/Formulario_de_caso__c/fields/El_beb_consume_otros_alimentos_o_toma_a__c.field-meta.xml
<CustomField>
    <fullName>El_beb_consume_otros_alimentos_o_toma_a__c</fullName>
    <label>¿El bebé consume otros alimentos?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>OTRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>