force-app/main/default/objects/Formulario_de_caso__c/fields/Es_la_primera_vez_que_le_sucede__c.field-meta.xml
<CustomField>
    <fullName>Es_la_primera_vez_que_le_sucede__c</fullName>
    <label>¿Es la primera vez que le sucede?</label>
    <type>TextArea</type>
</CustomField>