force-app/main/default/objects/Formulario_de_caso__c/fields/Hace_cu_nto_consume_el_producto__c.field-meta.xml
<CustomField>
    <fullName>Hace_cu_nto_consume_el_producto__c</fullName>
    <label>¿Hace cuánto consume el producto?</label>
    <type>TextArea</type>
</CustomField>