force-app/main/default/objects/Formulario_de_caso__c/fields/Not_alguna_caracter_stica_distinta__c.field-meta.xml
<CustomField>
    <fullName>Not_alguna_caracter_stica_distinta__c</fullName>
    <inlineHelpText>Previo a la aparición de los síntomas</inlineHelpText>
    <label>¿Notó alguna característica distinta?</label>
    <type>TextArea</type>
</CustomField>