force-app/main/default/objects/Formulario_de_caso__c/fields/Qu_diagnostico_le_brind__c.field-meta.xml
<CustomField>
    <fullName>Qu_diagnostico_le_brind__c</fullName>
    <label>¿Qué diagnostico le brindó?</label>
    <type>TextArea</type>
</CustomField>